# heirloom-lex

./: GNUmakefile.am  configure.ac
